@@ -1551,11 +1551,12 @@ namespace bt
 		dcheck_thread->deleteLater();
 		dcheck_thread = 0;
 		Out(SYS_GEN|LOG_NOTICE) << "Data check finished" << endl;
-		dataCheckFinished();
 		resetTrackerStats();
 		updateStatus();
 		if (lst)
 			lst->finished();
+		
+		dataCheckFinished();
 	}
 	
 	bool TorrentControl::isCheckingData(bool & finished) const
@@ -1716,7 +1717,7 @@ namespace bt
 		case DHT_FEATURE:
 			if (on)
 			{
-				if(!stats.priv_torrent)
+				if (!stats.priv_torrent)
 				{
 					psman->addDHT();
 					istats.dht_on = psman->dhtStarted();
@@ -1997,6 +1998,8 @@ namespace bt
 	
 	void TorrentControl::moveToCompletedDir()
 	{
+		disconnect(this,SIGNAL(dataCheckFinished()),this,SLOT(moveToCompletedDir()));
+		
 		// it is possible that the user might have disabled moving to the completed dir during the data check
 		// so double check before we start the move
 		if (completed_dir.path().isNull() || !stats.completed)
